--- a/www/.htaccess
+++ b/www/.htaccess
@@ -2,4 +2,12 @@ Options All -Indexes
 AddDefaultCharset utf-8
 
 RewriteEngine On
+
 RewriteRule ^(.*)$ static/$1 [L]
+
+ErrorDocument 404 /errors/404.html
+ErrorDocument 405 /errors/405.html
+ErrorDocument 408 /errors/408.html
+ErrorDocument 500 /errors/500.html
+ErrorDocument 502 /errors/502.html
+ErrorDocument 504 /errors/504.html
