--- a/www/static/.htaccess
+++ b/www/static/.htaccess
@@ -1,7 +1,5 @@
 RewriteEngine On
-
-RewriteRule ^server/(.*) ../server/$1 [R=301,L]
-RewriteRule ^uploads/(.*) ../server/uploads/$1 [R=301,L]
-
+RewriteRule ^server/(.*) ../server/$1
+RewriteRule ^uploads/(.*) ../server/uploads/$1
 RewriteCond %{SCRIPT_FILENAME} !-d
 RewriteRule ^([^.]+)$ $1.html [NC,L]
