Added flags to static's htaccess.

--- a/www/static/.htaccess
+++ b/www/static/.htaccess
@@ -1,5 +1,5 @@
 RewriteEngine On
-RewriteRule ^server/(.*) ../server/$1
-RewriteRule ^uploads/(.*) server/uploads/$1
+RewriteRule ^server/(.*) ../server/$1 [L]
+RewriteRule ^uploads/(.*) server/uploads/$1 [L]
 RewriteCond %{SCRIPT_FILENAME} !-d
 RewriteRule ^([^.]+)$ $1.html [NC,L]
